# aws_sigv4_rest_authorizer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
