[package]
name = "aws_sigv4_rest_authorizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.6"
aws-credential-types = { version = "1.1.6", features = ["hardcoded-credentials"] }
aws-sdk-cognitoidentity = "1.14.0"
aws-sdk-cognitoidentityprovider = "1.16.0"
aws-sigv4 = "1.1.6"
aws-smithy-runtime-api = "1.1.7"
aws-types = "1.1.6"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
